# Vaultic-App---Dev

./: .gitignore  .tool-versions  README.md  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: ci.yml
vaultic-backend/: .env.example  .gitignore  package.json  tsconfig.json
vaultic-backend/prisma/: schema.prisma
vaultic-backend/prisma/migrations/20260508165401_init/: migration.sql
vaultic-backend/prisma/migrations/20260511000000_employee_compensation_fields/: migration.sql
vaultic-backend/src/: config.ts  index.ts  prisma.ts
vaultic-backend/src/idl/: vaultic-types.ts  vaultic.json  vaultic.ts
vaultic-backend/src/middleware/: .gitkeep  auth.ts  cors.ts  rateLimit.ts  validate.ts
vaultic-backend/src/routes/: .gitkeep  claims.ts  employees.ts  events.ts  index.ts  payroll.ts  treasury.ts
vaultic-backend/src/schemas/: claims.ts  employees.ts  index.ts  payroll.ts  treasury.ts
vaultic-backend/src/services/: anchorClient.ts  auditLog.ts  eventListener.ts  ikaPoller.ts  index.ts  sse.ts
vaultic-backend/src/types/: express.d.ts
vaultic-backend/src/utils/: .gitkeep  logger.ts  signature.ts
vaultic-contracts/: Anchor.toml  Cargo.toml  tarpaulin.toml
vaultic-contracts/programs/vaultic/: Cargo.toml
vaultic-contracts/programs/vaultic/src/: errors.rs  events.rs  lib.rs
vaultic-contracts/programs/vaultic/src/encrypt/: cpi_accounts.rs  mod.rs
vaultic-contracts/programs/vaultic/src/fhe/: mod.rs
vaultic-contracts/programs/vaultic/src/ika/: mod.rs
vaultic-contracts/programs/vaultic/src/instructions/: claim.rs  decryption.rs  dwallet.rs  employee.rs  mod.rs  payroll.rs  policy.rs  treasury.rs
vaultic-contracts/programs/vaultic/src/state/: mod.rs
vaultic-contracts/scripts/: wipe-devnet-state.ts
vaultic-contracts/tests-proptest/: Cargo.toml
vaultic-contracts/tests-proptest/proptest-regressions/: lib.txt
vaultic-contracts/tests-proptest/src/: lib.rs  sim.rs
vaultic-frontend/: .env.example  .vercelignore  netlify.toml  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.setup.ts
vaultic-frontend/src/app/: globals.css  layout.tsx  page.tsx
vaultic-frontend/src/app/dashboard/: .gitkeep  layout.tsx  page.tsx
vaultic-frontend/src/app/portal/: .gitkeep  layout.tsx  page.tsx
vaultic-frontend/src/components/employees/: AddEmployeeDialog.tsx  EditEmployeeDialog.tsx  EmployeesTable.tsx  TerminateEmployeeButton.tsx
vaultic-frontend/src/components/landing/: LandingHero.tsx
vaultic-frontend/src/components/layout/: DashboardNav.tsx  DevnetBanner.tsx  PortalNav.tsx
vaultic-frontend/src/components/payroll/: ExecutePayrollButton.tsx  PayrollConfigForm.tsx  PayrollHistoryTable.tsx  PayrollRunsList.tsx  SalaryBandVisualizer.tsx
vaultic-frontend/src/components/policies/: ApproveTransactionButton.tsx  CreatePolicyDialog.tsx  PolicyCard.tsx  ProposeTransactionForm.tsx  TransactionProposalList.tsx
vaultic-frontend/src/hooks/: useEmployees.ts  useEnsureDeposit.ts  useMyClaims.ts  useMyEmployee.ts  usePayrollConfig.ts  usePayrollRuns.ts  usePolicies.ts  useRole.ts  useTreasury.ts
vaultic-frontend/src/lib/: anchor.ts  errorMessages.ts  format.ts  pda.ts  signedFetch.ts  utils.ts
vaultic-frontend/tests-utils/: render.tsx
(+24 files in other folders)
